--- a/src/app/login-component/login-component.html
+++ b/src/app/login-component/login-component.html
@@ -3,6 +3,17 @@
     <div class="card-header bg-primary text-white text-center">
       <h4 class="mb-0">Bejelentkezés</h4>
     </div>
+
+    @if (error()) {
+      <div class="alert alert-danger alert-dismissible fade show d-flex align-items-center justify-content-between mt-3" role="alert">
+        <div class="me-2">
+          <i class="bi bi-exclamation-triangle-fill me-2"></i>
+          {{ error() }}
+        </div>
+        <button type="button" class="btn-close" aria-label="Bezárás" (click)="error.set(null)"></button>
+      </div>
+    }
+
     <div class="card-body">
       <form (ngSubmit)="onLogin()">
         <div class="mb-3">
@@ -30,6 +41,8 @@
             placeholder="Jelszavad"
           />
         </div>
+
+
 
         <button type="submit" class="btn btn-primary w-100">Belépés</button>
       </form>
