--- a/src/app/worksheet-component/worksheet-details/worksheet-details.html
+++ b/src/app/worksheet-component/worksheet-details/worksheet-details.html
@@ -1,4 +1,15 @@
 <div class="container mt-4">
+
+  @if (error()) {
+    <div class="alert alert-danger alert-dismissible fade show d-flex align-items-center justify-content-between mt-3" role="alert">
+      <div class="me-2">
+        <i class="bi bi-exclamation-triangle-fill me-2"></i>
+        {{ error() }}
+      </div>
+      <button type="button" class="btn-close" aria-label="Bezárás" (click)="error.set(null)"></button>
+    </div>
+  }
+
   @if (formData(); as fd) {
     <h3 class="mb-4 text-center">🧰 Javításra beadott gép adatai</h3>
 
