--- a/src/app/defects-component/defects-component.html
+++ b/src/app/defects-component/defects-component.html
@@ -62,6 +62,10 @@
             </td>
           }
         </tr>
+      } @empty {
+        <tr>
+          <td colspan="5" class="text-center text-muted">Nincs találat</td>
+        </tr>
       }
     </tbody>
   </table>
