--- a/src/app/owner-company-employee-component/owner-company-employee-component.html
+++ b/src/app/owner-company-employee-component/owner-company-employee-component.html
@@ -84,7 +84,7 @@
             <td><input type="email" class="form-control" [(ngModel)]="editingEmployee()!.email"></td>
             <td><input type="number" class="form-control" [(ngModel)]="editingEmployee()!.telNum"></td>
             <td><input type="text" class="form-control" [(ngModel)]="editingEmployee()!.title"></td>
-            <td><input type="number" class="form-control" [(ngModel)]="editingEmployee()!.ownerCompanyName"></td>
+            <td><input type="text" class="form-control" [(ngModel)]="editingEmployee()!.ownerCompanyName"></td>
             <td>
               <button class="btn btn-primary btn-sm me-2" (click)="saveEdit()">Mentés</button>
               <button class="btn btn-secondary btn-sm" (click)="cancelEdit()">Mégse</button>
